objects/LiveText__OptInStatus__c.object
<CustomObject>
    <description>Opt-in status for a given phone number. The status regards communication between the relevant LiveMessage phone number and the given phone number.</description>
    <fields>
        <fullName>LiveText__LiveTextNumber__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The LiveMessage phone number related to this opt-in status</description>
        <label>LiveMessage Number</label>
        <referenceTo>LiveText__LiveText_Number__c</referenceTo>
        <relationshipName>OptInStatus</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__Status__c</fullName>
        <description>The opt-in status of the subscriber. 1 = opted in, 0 = opted out</description>
        <label>Status</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiveText__SubscriberPhoneNumber__c</fullName>
        <description>The phone number of the subscriber opting in or out of communication with the relevant LiveMessage phone number.</description>
        <label>SubscriberPhoneNumber</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <label>Opt-In Status</label>
    <nameField>
        <label>OptInStatus Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opt-In Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>